log/build_2024-04-21_10-12-15/robot_2024/stderr.log
  File "/home/yamashita/robot_2024/install/robot_2024/lib/python3.10/site-packages/robot_2024/webControll.py", line 23
    msg.data = 'speed:{}:deg:{}'.format(int(arg),int(45)))
                                                         ^
SyntaxError: unmatched ')'

